# cosmosdb-rust-mongodb-quickstart

./: Cargo.toml  README.md
src/: main.rs
