[package]
name = "todo"
version = "0.1.0"
authors = ["abhishek <abhirockzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

[dependencies.serde]
version = "1.0.118"

[dependencies.bson]
version = "1.1.0"